<resources>
    <string name="app_name">shinkansen</string>
    <string name="roll" translatable="false">Roll</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="trainDetail">You haven\'t chosen a train yet</string>
    <string name="time11">11:00</string>
    <string name="time15">15:00</string>
    <string name="time19">19:00</string>
    <string name="ok" translatable="false">OK</string>
    <string name="errorInputs">Error Inputs</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="ascending_or_descending_order">Ascending or descending order</string>
    <string name="text_filter_options">Filter Options</string>
    <string name="filter_by_author_or_date">Filter by author or date</string>
    <string name="text_author">Author</string>
    <string name="text_date">Date</string>
    <string name="text_filter">Filter</string>
    <string name="filter_author">Author</string>
    <string name="filter_date">Date</string>
    <string name="key_filter">filter</string>
    <string name="key_order">order</string>
    <string name="order_asc">ASC</string>
    <string name="order_desc">DESC</string>
    <string name="direction">Direction: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>