<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="8dp">


    <ImageView
        android:id="@+id/dice_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/dice_1" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Direction: " />

    <EditText
        android:id="@+id/fromTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/from"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <EditText
        android:id="@+id/toTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/to"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Time: " />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio11"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/time11" />

        <RadioButton
            android:id="@+id/radio15"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/time15" />

        <RadioButton
            android:id="@+id/radio19"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/time19" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/trainDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trainDetail" />


</LinearLayout>